# fineflow

./: .env.prod  .env.tauri  README.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: fineflow.db
src/: App.vue  global.d.ts  main.ts
src/api/: api.ts  common.ts  crudApi.ts  db.ts  index.ts  schema.d.ts  tcrudApi.ts  utils.ts
src/api/database/: index.ts
src/api/database/db/: flow.ts  index.ts  node.ts  server.ts
src/assets/: base.css  fineflow.db  index.scss
src/components/api-flow/: common-utils.ts  css-vars.css  index.vue
src/components/api-flow/components/: data-manage.vue  lib-src.vue  system-setting.vue
src/components/api-flow/components/flow-select/: index.vue
src/components/api-flow/components/node-editor/: index.vue
src/components/api-flow/components/node-select/: flow-server-manager.vue  index.vue
src/components/api-flow/components/param-input-bar/: index.vue
src/components/api-flow/engine/: config.ts  dynamic.ts  editor.ts  fine-tools.ts  node-common-utils.ts  node-vue-template.vue  param-types.ts  register.ts  state-sync.ts  store.ts  types.ts  utils.ts
src/components/api-flow/icons/: load-icon.vue  upload-icon.vue
src/locale/: index.ts  messages.ts
src/locale/lang/: en.ts  zh.ts
src/utils/: api.ts  loadDb.ts
src/views/: HomeView.vue
str-tauri/: Cargo.toml  tauri.conf.json
str-tauri/capabilities/: default.json  desktop.json
str-tauri/icons/: icon.icns
str-tauri/src/: lib.rs  main.rs
(+24 files in other folders)
