[package]
name = "fineflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fineflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0.0-rc.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-dialog = "2.0.0-rc.1"
tauri-plugin-fs = "2.0.0-rc.2"
tauri-plugin-http = "2.0.0-rc.2"
tauri-plugin-process = "2.0.0-rc.1"
tauri-plugin-sql = { version = "2.0.0-rc.1", features = ["sqlite"] }
tauri-plugin-store = "2.0.0-rc.1"
tauri-plugin-upload = "2.0.0-rc.1"
tauri-plugin-websocket = "2.0.0-rc.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc.1"
tauri-plugin-positioner = "2.0.0-rc.1"
tauri-plugin-single-instance = "2.0.0-rc"

